# dbi-backend

./: .gitignore  README.md  package.json
.github/workflows/: release.yml
src/: i18n.js  index.html  main.js  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  dbi.rs  lib.rs  main.rs
