[package]
name = "dbi-backend"
version = "1.0.0"
edition = "2021"

[lib]
name = "dbi_backend_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "dbi-backend"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
nusb = "0.2"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
